hphp/test/slow/array_iterator/miter_surprise.php.expectf
Fatal error: Maximum execution time of 1 seconds exceeded in %s/test/slow/array_iterator/miter_surprise.php on line 7
